fixed centering on progress bars in cards (vertical alignment)

--- a/public/main.css
+++ b/public/main.css
@@ -116,7 +116,7 @@
 }
 
 .rating-cat{
-    padding-top: 3vh;
+    padding-top: 16px;
     text-align: center;
 }
 
@@ -146,6 +146,7 @@
 .progress-circle{
   text-align:center;
   margin: auto;
+  padding-top: 16px;
 }
 
 
